tests/baselines/reference/satisfiesContextualType.errors.txt
tests/cases/compiler/satisfiesContextualType.ts(2,7): error TS7006: Parameter 's' implicitly has an 'any' type.


==== tests/cases/compiler/satisfiesContextualType.ts (1 errors) ====
    let obj: { f(s: string): void } & Record<string, unknown> = {
        f(s) { }, // "incorrect" implicit any on 's'
          ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.
        g(s) { }
    } satisfies { g(s: string): void } & Record<string, unknown>;
    